# point-acquisition

./: .gitignore  Dockerfile  Dockerfile.local  Dockerfile.splash  Makefile  README.md  package.json  playwright.config.ts  pyproject.toml  requirements.txt
.github/workflows/: fare-adjustment.yml  github-actions.yml  test.yml
app/src/: main.py
app/src/utils/: slack_notify.py
docker/: docker-compose-local.yml  docker-compose-splash.yml  docker-compose-test.yml  docker-compose.yml
src/: auto_collect_autoracing.py  auto_collect_spat4.py  auto_deposit_autoracing.py  auto_deposit_spat4.py  auto_get_point_income.py  auto_get_point_income_local.py  main.py  test.py
src/auto_deposit_rakuten_horse_racing/: auto_deposit_autoracing.py  main.py
src/auto_get_point_income/: auto_get_point_income.py
src/utils/: config.py  constants.py  logger.py  slack_notify.py
tests/: example.spec.ts
